--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -1,77 +1,38 @@
 <mdb-card style="background-image: url('https://mdbootstrap.com/img/Photos/Others/gradient1.jpg')">
-  <div class="text-white text-center py-5 px-4 my-5">
+  <div class="text-white text-center py-5 px-4">
     <div>
       <img class="img-fluid card-title pt-3 mb-5 font-bold" src="../../../../assets/images/areoplane white.png" alt="">
-      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>A local guide hiring platform </strong></h2>
-      <p class="mx-5 mb-5">Nobody knows a location better than its local residents.
+      <h2 class="card-title h1-responsive pt-3 mb-4 font-bold"><strong>A local guide hiring platform </strong></h2>
+      <p class=" mb-5">Nobody knows a location better than its local residents.
         Voila is an app which harnesses the same fact and connects a traveller to his/her compatible guide who shares interests like food, history, architecture, etc. so that the travelling experience can become even better while giving a significant boost to freelancing opportunities in the tourism industry.
       </p>
     </div>
   </div>
 </mdb-card>
 
-  <div class="text-center py-5 px-4 my-5">
-    <div>
-      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Meet Your developers</strong></h2>
-      <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>The Decoits 3.0</strong></h2>
-      <p class="mx-5 mb-5">We are a bunch of nerds from Earth C-137 who are mad about the product we develop. Focused on finding a solution that actually works and can be applied to the industry right off the bat. Rigorous Brainstorming before taking any decision forward, making an app with a detailed thought behind every user experience are some of our general practices.
-      </p>
- </div>
-    </div>
-    <div class="row">
-      <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/Ekta.jpeg" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
-      <h2 class=" col-12"><p>Ekta Garg</p></h2>
-      <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;happyekta99@gmail.com</p></div>
-      <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;ektagarg99</p></div>
-      <div class="col-6"><p><i class="fab fa-github"></i>&nbsp;&nbsp;ekuicsd</p></div>
-    </div>
-  </div>
-  <div class="col-12 col-lg-6  row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/rajat.jpg" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
-      <h2 class=" col-12"><p>Rajat Sharma</p></h2>
-      <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;rajatsharmaatri@gmail.com</p></div>
-      <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;rajat_sd</p></div>
-      <div class="col-6"><p><i class="fab fa-github"></i>&nbsp;&nbsp;RAJATsd</p></div>
-    </div>
-  </div>
-  <div class="col-12 col-lg-6  row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/venu.jpeg" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
-      <h2 class=" col-12"><p>VenuGopal</p></h2>
-      <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;venugopalsinghal@gmail.com</p></div>
-      <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;venugopalsinghal</p></div>
-      <div class="col-6"><p><i class="fab fa-github"></i>&nbsp;venugopalsinghal</p></div>
-    </div>
-  </div>
-  <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/Shobhit.jpeg" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
-      <h2 class=" col-12"><p>Shobit Jain</p></h2>
-      <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;jainshobit0@gmail.com</p></div>
-      <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;sj_2050_</p></div>
-      <div class="col-6"><p><i class="fab fa-github"></i>&nbsp;&nbsp;sj1218305</p></div>
-    </div>
-  </div>
-  <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/vidhi.JPG" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
-      <h2 class=" col-12"><p>Vidhi Agrawal</p></h2>
-      <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;vidhiagrawal305@gmail.com</p></div>
-      <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;vidhi_agrawal3</p></div>
-      <div class="col-6"><p><i class="fab fa-github"></i>&nbsp;&nbsp;vidhiagrawal3</p></div>
-    </div>
-  </div>
-   <div class="col-12 col-lg-6 row mb-5 mt-4">
-    <img class="img-fluid pp col-4" src="../../../../assets/images/archit.JPG" style="border-radius: 50%;">
-    <div class="col-8 row decoids">
-      <h2 class=" col-12"><p>Archit jain</p></h2>
-      <div class="col-12"><p><i class="far fa-envelope"></i>&nbsp;&nbsp;architjain808@gmail.com</p></div>
-      <div class="col-6"><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;_archit.jain_</p></div>
-      <div class="col-6"><p><i class="fab fa-github"></i>&nbsp;&nbsp;architjain808</p></div>
+<div class="text-center py-5 px-4">
+  <div>
+    <h2 class="card-title h1-responsive pt-3 mb-4 font-bold"><strong>Meet Your developers</strong></h2>
+    <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>The Decoits 3.0</strong></h2>
+    <p>We are a bunch of nerds from Earth C-137 who are mad about the product we develop. Focused on finding a solution that actually works and can be applied to the industry right off the bat. Rigorous Brainstorming before taking any decision forward, making an app with a detailed thought behind every user experience are some of our general practices.
+    </p>
+</div>
+</div>
+
+<div class="row">
+  <div class="col-12 col-md-6 col-lg-4 my-3 px-0 mb-5" *ngFor="let dev of developers">
+    <div class="row ml-2">
+      <div class="col-4 col-sm-5 px-2 text-center">
+        <img class="img-fluid pp" [src]="dev.picUrl" style="border-radius: 50%;">
+      </div>
+      <div class="col-8 col-sm-7 px-1">
+        <h2><p>{{dev.name}}</p></h2>
+        <div><p><i class="far fa-envelope"></i>&nbsp;&nbsp;{{dev.email}}</p></div>
+        <div><p><i class="fab fa-instagram"></i>&nbsp;&nbsp;{{dev.instagram}}</p></div>
+        <div><p><i class="fab fa-github"></i>&nbsp;&nbsp;{{dev.github}}</p></div>
+      </div>
     </div>
   </div>
 </div>
 
+<app-footer></app-footer>
