--- a/src/app/shared/components/help-page/help-page.component.html
+++ b/src/app/shared/components/help-page/help-page.component.html
@@ -1,7 +1,7 @@
 <div class="row mr-lg-5 ml-lg-2">
-    <div class="m-3 m-md-0 col-md-2">
-        <h3 class="mb-md-4 d-none d-md-block">QUICK LINKS</h3>
-        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+    <div class="mt-3 mx-3 mb-0 m-md-0 col-md-3 col-lg-2">
+        <h4 class="mb-md-4 d-none d-md-block mt-5">QUICK LINKS</h4>
+        <ul class="nav nav-pills" id="pills-tab" role="tablist">
 
             <li class="nav-item">
                 <a class="nav-link active" id="tourists-tab" data-toggle="pill" href="#tourists" role="tab" aria-controls="tourists" aria-selected="true">Tourists</a>
@@ -18,12 +18,12 @@
         </ul>
 
     </div>
-    <div class="col-12 col-md-10 pr-lg-4">
+    <div class="col-12 col-md-9 pr-lg-4">
         <div class="tab-content pt-2 pl-1" id="pills-tabContent">
-            <h1 class="section__headline">FAQs</h1>
+            <h1 class="section__headline pt-0 pt-lg-4">FAQs</h1>
             <div class="tab-pane fade show active" id="tourists" role="tabpanel" aria-labelledby="tourists-tab">
                 <h2 class="c-faqs__headline">Tourists</h2>
-                <h3 class="my-3">Bookings</h3>
+                <h4 class="my-3 px-3">Bookings</h4>
                 <ul class="c-faqs">
                     <li class="c-faq c-faq--active">
                         <span class="c-faq__title">How to make a booking on Voila?</span>
@@ -57,7 +57,7 @@
                         </div>
                     </li>
                 </ul>
-                <h3 class="my-3">Personalized Tours</h3>
+                <h4 class="my-3 px-3">Personalized Tours</h4>
                 <ul class="c-faqs">
                     <li class="c-faq">
                         <span class="c-faq__title">What’s a personalized tour?</span>
@@ -78,7 +78,7 @@
             <!-- /end c-faqs -->
             <div class="tab-pane fade" id="guides" role="tabpanel" aria-labelledby="guides-tab">
                 <h2 class="c-faqs__headline">Guides</h2>
-                <h3 class="my-3">Basics</h3>
+                <h4 class="my-3 px-3">Basics</h4>
                 <ul class="c-faqs">
                     <li class="c-faq">
                         <span class="c-faq__title">Who can become a Withlocals host?</span>
@@ -116,7 +116,7 @@
                     </li>
 
                 </ul>
-                <h3 class="my-3">Tours and bookings</h3>
+                <h4 class="my-3 px-3">Tours and bookings</h4>
                 <ul class="c-faqs">
                     <li class="c-faq">
                         <span class="c-faq__title">How do I contact my guests?</span>
@@ -200,4 +200,4 @@
         </div>
 
     </div>
-    </ div>
+    </div>
