--- a/src/app/shared/components/help-page/help-page.component.scss
+++ b/src/app/shared/components/help-page/help-page.component.scss
@@ -45,7 +45,7 @@ body *::before {
     text-align: left;
     padding-left: 15px;
     font-size: 1.7em;
-    margin-top: 1.4em;
+    // margin-top: 1.4em;
     font-weight: bold;
 }
 
