--- a/src/app/modules/home/filter-form/filter-form.component.scss
+++ b/src/app/modules/home/filter-form/filter-form.component.scss
@@ -3,154 +3,12 @@
 background-color: white;
 }
 
-// .form-group.hidden {
-//     width: 0;
-//     margin: 0;
-//     border: none;
-//     padding: 0;
-//   }
-//   .custom-day {
-//     text-align: center;
-//     display: inline-block;
-//   }
-
-
-//   .custom-day.focused {
-//     background-color: #e6e6e6;
-//   }
-//   .custom-day.range, .custom-day:hover {
-//     background-color: rgb(2, 117, 216);
-//     color: white;
-//   }
-//   .custom-day.faded {
-//     background-color: rgba(2, 117, 216, 0.5);
-//   }
-
-//
-// .dateInput {
-//     padding: .375rem .75rem;
-//     font-size: 1rem;
-//     font-weight: 400;
-// }
-
-// @media(min-width: 576px) {
-//     .bottom-margin {
-//         margin-bottom: 20px;;
-//     }
-// }
-
-// @media (min-width: 576px) {
-// .form-inline .form-group {
-//     display: block;
-// }
-// }
-
-
-// @media(min-width: 750px) {
-// .input-group {
-//     input {
-//         width: 180px;
-//         display: flex;
-//     }
-// }
-// }
-
-// @media(min-width: 820px) {
-//     .input-group {
-//         input {
-//             width: 200px;
-//             display: flex;
-//         }
-// }
-// }
-
-// @media(min-width: 860px) {
-//     .input-group {
-//         input {
-//             width: 210px;
-//             display: flex;
-//         }
-// }
-// }
-// @media(min-width: 900px) {
-//     .input-group {
-//         input {
-//             width: 220px;
-//             display: flex;
-//         }
-//     }
-//     }
-
-// @media(min-width: 951px) {
-//     .input-group {
-//         input {
-//             width: 245px;
-//             display: flex;
-//         }
-// }
-// }
-
-// @media(min-width: 992px) {
-//     .input-group {
-//         input {
-//             width: 98px;
-//             display: flex;
-//         }
-// }
-// }
-
-// @media(min-width: 1090px) {
-//     .input-group {
-//         input {
-//             width: 100px;
-//             display: flex;
-//         }
-// }
-// }
-
-// @media(min-width: 1140px) {
-//     .input-group {
-//         input {
-//             width: 120px;
-//             display: flex;
-//         }
-// }
-// }
-
-
-// @media(min-width: 1200px) {
-//     .input-group {
-//         input {
-//             width: 130px;
-//             display: flex;
-//         }
-// }
-// }
-
-// @media(min-width: 1400px) {
-//     .input-group {
-//         input {
-//             width: 160px;
-//             display: flex;
-//         }
-// }
-// }
-
-// @media(min-width: 1450px) {
-//     .input-group {
-//         input {
-//             width: 175px;
-//             display: flex;
-//         }
-// }
-// }
-
 .btn-css {
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
-.form-control {
+.form-control, .custom-select {
     border-radius: 0px;
     border: 0.25px solid black;
 }
