--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -60,7 +60,7 @@
           <a [routerLink]="['/guide/show-register']" >Become an Guide</a>
         </p>
         <p>
-          <a [routerLink]="['/aboutUs']">Decoids 3.0</a>
+          <a [routerLink]="['/aboutUs']">The Decoits 3.0</a>
         </p>
         <p>
           <a [routerLink]="['/help']">Help</a>
