--- a/src/app/shared/components/chats/chats.component.html
+++ b/src/app/shared/components/chats/chats.component.html
@@ -1,17 +1,17 @@
 <div class="container-fluid">
     <div class="row">
-        <div *ngIf="userService.getRole() === 'tourist'" class="col-lg-3 d-none d-lg-block px-0">
+        <div *ngIf="userService.getRole() === 'tourist'" style="border-right: 1px solid rgba(128, 128, 128, 0.384);" class="col-lg-3 d-none d-lg-block px-0">
             <app-chat-history-list></app-chat-history-list>
         </div>
         <!--  -->
         <div *ngIf="userService.getRole() === 'tourist'" class="col-12 col-lg-9">
             <div class="row">
                 <div class="col-12 col-lg-12 px-0 ">
-                    <div class="row py-3 mx-0" style="background-color : #007bff; color: #b7e8eb;">
+                    <div class="row py-3 mx-0" style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%); ">
                         <div class="col-3 col-md-3 ">
                             <img src="http://placehold.it/50x50" class="circle" style="border-radius: 50%;">
                         </div>
-                        <div class="col-9 col-sm-9">
+                        <div class="col-9 col-sm-9 ">
                             <span style="font-size: 30px;"><b>{{name}}</b></span>
                         </div>
                     </div>
@@ -24,12 +24,14 @@
                                 <div class="left" *ngIf="sender._id !== reciever._id && sender._id !== message.senderId">
                                     <div class="chat-bubble left slide-left">
                                         <div class="message">{{message.body}}</div>
+                                        <div class="small-f float-right">6:12pm</div>
                                     </div>
                                 </div>
 
                                 <div class="right" *ngIf="sender._id === message.senderId">
                                     <div class="chat-bubble right slide-right">
                                         <div class="message">{{message.body}}</div>
+                                        <div class="small-f float-right">6:12pm</div>
                                     </div>
                                 </div>
 
@@ -47,8 +49,8 @@
                         <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
                     </form>
                 </div>
-                <div class="col-3 col-md-2 col-lg-2 px-0">
-                    <button type="submit" class="form-control btn btn-success mx-0 my-0 btn-sm font-size" (click)="sendMessage()">Send</button>
+                <div class="col-3 col-md-2 col-lg-2 px-3 white-text">
+                    <button type="submit" class="form-control btn my-0 mx-0 btn-sm font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
                 </div>
             </div>
         </div>
@@ -56,11 +58,11 @@
         <div class="col" *ngIf="userService.getRole() === 'guide'">
             <div class="row">
                 <div class="col-12 col-lg-12 px-0 ">
-                    <div class="row py-3 mx-0" style="background-color : #007bff; color: #b7e8eb;">
+                    <div class="row py-3 mx-0" style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%);">
                         <div class="col-3 col-md-3 ">
                             <img src="http://placehold.it/50x50" class="circle" style="border-radius: 50%;">
                         </div>
-                        <div class="col-9 col-sm-9">
+                        <div class="col-9 col-sm-9 white-text">
                             <span style="font-size: 30px;"><b>{{name}}</b></span>
                         </div>
                     </div>
@@ -73,12 +75,14 @@
                                 <div class="left" *ngIf="sender._id !== reciever._id && sender._id !== message.senderId">
                                     <div class="chat-bubble left slide-left">
                                         <div class="message">{{message.body}}</div>
+                                        <div class="small-f float-right">6:12pm</div>
                                     </div>
                                 </div>
 
                                 <div class="right" *ngIf="sender._id === message.senderId">
                                     <div class="chat-bubble right slide-right">
                                         <div class="message">{{message.body}}</div>
+                                        <div class="small-f float-right">6:12pm</div>
                                     </div>
                                 </div>
 
@@ -96,12 +100,10 @@
                         <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
                     </form>
                 </div>
-                <div class="col-3 col-md-2 col-lg-2 px-0">
-                    <button type="submit" class="form-control btn btn-success mx-0 my-0 btn-sm font-size" (click)="sendMessage()">Send</button>
+                <div class="col-3 col-md-2 col-lg-2 px-3 white-text">
+                    <button type="submit" class="form-control btn mx-0 my-0 btn-sm font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
                 </div>
             </div>
         </div>
     </div>
-
-
 </div>
