--- a/src/app/modules/tourists/pages/tourists-home/tourists-home.component.html
+++ b/src/app/modules/tourists/pages/tourists-home/tourists-home.component.html
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-md-12 mx-0" style="padding: 0;" >
                 <div class="tab-content" id="myTabContent">
-                  <!-- <div *ngIf="ShowLoadingIndicator" class="loader">
+                  <div *ngIf="ShowLoadingIndicator" class="loader">
                     <span></span>
                     <span></span>
                     <span></span>
                     <span></span>
-                  </div> -->
+                  </div>
                     <router-outlet ></router-outlet>
                 </div>
             </div>
