--- a/src/app/modules/guide/pages/guide-home/guide-home.component.scss
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.scss
@@ -22,8 +22,9 @@
     width: 100%;
     margin: 0;
     background: black !important;
+    min-height: 100vh;
     border-right: 1px solid rgba(128, 128, 128, 0.384);
-    // position: relative;
+    // position: absolute;
 }
 
 .navside .content1 img {
