--- a/src/app/shared/components/deals-cards/deals-cards.component.scss
+++ b/src/app/shared/components/deals-cards/deals-cards.component.scss
@@ -1,11 +1,3 @@
-// .sticky {
-//     position: -webkit-sticky;
-//     position: sticky;
-//     top: 20px;
-// }
-// .bgclass {
-//     background-image: linear-gradient(to right, #22c1c3, #fdbb2d);
-// }
 .guide-contain {
     margin-left: 110px !important;
     margin-right: 0 !important;
@@ -14,9 +6,15 @@
 .img-fav {
     position: relative;
 }
-
+.img-fluid {
+    height: 210px;
+}
+.mdb-card-img img.img-fluid {
+    height: 210px;
+}
 .img-fav .main-img {
     display: block;
+    height: 210px;
 }
 
 .img-fav .fa-heart {
