--- a/src/app/shared/components/guide-profile/guide-profile.component.scss
+++ b/src/app/shared/components/guide-profile/guide-profile.component.scss
@@ -8,10 +8,10 @@
     background-image: linear-gradient(to right, #22c1c3, #fdbb2d);
 }
 
-.guide-contain {
-    margin-left: 110px !important;
-    margin-right: 0 !important;
-}
+// .guide-contain {
+//     margin-left: 110px !important;
+//     margin-right: 0 !important;
+// }
 
 .img-fav {
     position: relative;
