--- a/src/app/shared/components/chats/chats.component.scss
+++ b/src/app/shared/components/chats/chats.component.scss
@@ -44,7 +44,7 @@ img.imgMsg {
 }
 
 .message-wrapper {
-    position: relative;
+    // position: relative;
     margin-top: 10px;
     z-index: 800 !important;
 }
@@ -276,7 +276,7 @@ emoji-content {
 
 .font-size {
     font-size: 15px;
-    // height: 17px;
+    height: 42px;
 }
 
 .small-f {
