--- a/src/app/shared/components/chats/chats.component.html
+++ b/src/app/shared/components/chats/chats.component.html
@@ -8,11 +8,12 @@
             <div class="row">
                 <div class="col-12 col-lg-12 px-0 ">
                     <div class="row py-3 mx-0" style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%); ">
-                        <div class="col-3 col-md-3 ">
+                        <!-- <div class="col-3 col-md-3 ">
                             <img src="http://placehold.it/50x50" class="circle" style="border-radius: 50%;">
-                        </div>
-                        <div class="col-9 col-sm-9 ">
-                            <span style="font-size: 30px;"><b>{{name}}</b></span>
+                        </div> -->
+                        <div class="col-12">
+                            <span style="font-size: 30px;"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
+                                {{name | titlecase}} (Personal)</b></span>
                         </div>
                     </div>
                 </div>
@@ -24,14 +25,14 @@
                                 <div class="left" *ngIf="sender._id !== reciever._id && sender._id !== message.senderId">
                                     <div class="chat-bubble left slide-left">
                                         <div class="message">{{message.body}}</div>
-                                        <div class="small-f float-right">6:12pm</div>
+                                        <div class="small-f float-right">{{message.created | date: 'dd-MM-yyyy'}}</div>
                                     </div>
                                 </div>
 
                                 <div class="right" *ngIf="sender._id === message.senderId">
                                     <div class="chat-bubble right slide-right">
                                         <div class="message">{{message.body}}</div>
-                                        <div class="small-f float-right">6:12pm</div>
+                                        <div class="small-f float-right">{{message.created | date: 'dd-MM-yyyy'}}</div>
                                     </div>
                                 </div>
 
@@ -42,28 +43,28 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row bottomFix">
-                <div class="col-9 col-md-10 col-lg-7 px-0">
-                    <form autocomplete="off">
-                        <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
-                    </form>
+            <form autocomplete="off">
+                <div class="row bottomFix" style="z-index:1000">
+                    <div class="col-9 col-md-10 col-lg-7 px-0">
+                            <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
+                    </div>
+                    <div class="col-3 col-md-2 col-lg-2 px-0 white-text">
+                        <button type="submit" class="form-control btn my-0 mx-0  font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
+                    </div>
                 </div>
-                <div class="col-3 col-md-2 col-lg-2 px-3 white-text">
-                    <button type="submit" class="form-control btn my-0 mx-0 btn-sm font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
-                </div>
-            </div>
+            </form>
         </div>
 
         <div class="col" *ngIf="userService.getRole() === 'guide'">
             <div class="row">
                 <div class="col-12 col-lg-12 px-0 ">
                     <div class="row py-3 mx-0" style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%);">
-                        <div class="col-3 col-md-3 ">
+                        <!-- <div class="col-3 col-md-3 ">
                             <img src="http://placehold.it/50x50" class="circle" style="border-radius: 50%;">
-                        </div>
-                        <div class="col-9 col-sm-9 white-text">
-                            <span style="font-size: 30px;"><b>{{name}}</b></span>
+                        </div> -->
+                        <div class="col-12">
+                            <span style="font-size: 30px;"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
+                                {{name | titlecase}} (Personal)</b></span>
                         </div>
                     </div>
                 </div>
@@ -75,14 +76,14 @@
                                 <div class="left" *ngIf="sender._id !== reciever._id && sender._id !== message.senderId">
                                     <div class="chat-bubble left slide-left">
                                         <div class="message">{{message.body}}</div>
-                                        <div class="small-f float-right">6:12pm</div>
+                                        <div class="small-f float-right">{{message.created | date: 'dd-MM-yyyy'}}</div>
                                     </div>
                                 </div>
 
                                 <div class="right" *ngIf="sender._id === message.senderId">
                                     <div class="chat-bubble right slide-right">
                                         <div class="message">{{message.body}}</div>
-                                        <div class="small-f float-right">6:12pm</div>
+                                        <div class="small-f float-right">{{message.created | date: 'dd-MM-yyyy'}}</div>
                                     </div>
                                 </div>
 
@@ -93,17 +94,17 @@
                     </div>
                 </div>
             </div>
-
-            <div class="row bottomFix">
-                <div class="col-9 col-md-10 col-lg-7 px-0">
-                    <form autocomplete="off">
+            <form autocomplete="off">
+                <div class="row bottomFix" style="z-index:1000">
+                    <div class="col-9 col-md-10 col-lg-7 px-0">
                         <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
-                    </form>
+                    </div>
+                    <div class="col-3 col-md-2 col-lg-2 px-0 white-text">
+                        <button type="submit" class="form-control btn mx-0 my-0  font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
+                    </div>
                 </div>
-                <div class="col-3 col-md-2 col-lg-2 px-3 white-text">
-                    <button type="submit" class="form-control btn mx-0 my-0 btn-sm font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
-                </div>
-            </div>
+            </form>
+
         </div>
     </div>
 </div>
